# japanese-mistral-300m-recipe

./: .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  pyproject.toml  quick_start.ipynb  requirements.txt  run_all.sh  setup.sh
docs/: zenn_article_20231213.md
examples/inst-tuning/: inference.sh  run_all.sh  train.sh
examples/pretrain/: dataset.sh  inference.sh  run_all.sh  tokenizer.sh  train.sh
examples/quick_start/: quick_start.ipynb
examples/simple_example/: README.md  dataset.sh  train.sh  train_2b.sh
fine-tuning/: fine-tuning.sh
fine-tuning/dataset/: alpaca_preprocess.py  dataset.sh
fine-tuning/inference/: inference.py
fine-tuning/train/: hf_config_ft.json  train.sh
pretrain/: inference.sh  pretrain_3b.sh
pretrain/dataset/: dataset.sh  dataset_with_corpus_cleaning.sh  normalize.py  wiki_preprocess.py
pretrain/inference/: inference.py  inference.sh  inference_3b.py  inference_3b.sh
pretrain/tokenizer/: spm_tokenize.py  spm_tokenize_bare.py  tokenizer.sh
pretrain/train/: ds_config_zero.json  ds_config_zero2.json  ds_config_zero3.json  hf_config.json  hf_config_39m.json  hf_config_3b.json  run_clm.py  run_clm_better_transformer.py  train.sh  train_39m.sh  train_3b.sh
pretrain/train/mistral-300m/: check_mistral_size.py  config.json
pretrain/train/mistral-39m/: check_mistral_39m_size.py  config.json
pretrain/train/mistral-3b/: check_mistral_3b_size.py  config.json
src/config/: config_mistral_2b.json  config_mistral_300m.json
src/inference/: inference.py  sft_inference.py
src/tokenizer/: extract_text_of_jsonl.py  unigram.py
src/train/: run_clm.py  sft_train.py
src/util/: check_model_size.py  check_token_size.py
